--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Hi, I'm <span>Pranav Patil</span></h1>
-                <h2>Full Stack Developer</h2>
+                <h2>AI/ML Engineer</h2>
                 <p>"Crafting elegant web experiences with code and creativity."</p>
                 <div class="hero-btns">
                     <a href="#projects" class="btn">View Work</a>
@@ -86,7 +86,7 @@
                         <a href=" https://www.hackerrank.com/profile/s98625798"><i class="fab fa-hackerrank"></i></a>
                         <a href=" https://leetcode.com/u/_Pranav__/"><i class="fab fa-codiepie"></i></a>
                     </div>
-                    <a href="Google_CV.pdf" class="btn">Download CV</a>
+                    <a href="Pranav_Patil_latest_CV.pdf" class="btn">Download CV</a>
                 </div>
             </div>
         </div>
